fixed aestetics, first draft done

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -13,6 +13,12 @@ h1 {
   z-index: 0;
 }
 
+hr {
+  background-color: #2d241d;
+  border          : 0.1em solid #2d241d;
+  margin          : 0.1em;
+}
+
 textarea {
   border       : 0.1em solid #302720;
   color        : #000000;
@@ -33,6 +39,12 @@ textarea {
   margin-left: -2%;
 }
 
+div.sheet-injuries-grid hr,
+div.sheet-ark-development-grid hr,
+div.sheet-ark-other-grid hr {
+  border: 1px solid;
+}
+
 .sheet-header-h1 {
   font-family: "Times New Roman", Times, serif;
   font-size: 1.25em;
@@ -46,27 +58,28 @@ textarea {
   text-shadow: 0.2em 0.2em 0.4em #000000;
 }
 
+hr.sheet-horizontal-rule,
+hr.sheet-horizontal-rule::before  {
+  background-color: transparent;
+  border-color    : #000;
+  border-radius   : 0.5em;
+  height          : 0.5em;
+}
+
 hr.sheet-horizontal-rule {
-  margin-top: 10px;
-  margin-bottom: 0px;
-  width: 90%;
-  overflow: visible;
-  height: 10px;
-  border-style: solid;
-  border-color: #000;
-  border-width: 1px 0 0 0;
-  border-radius: 5px;
+  border-style    : solid;
+  border-width    : 1px 0 0 0;
+  margin          : 0.5em 0.5em 0em 0.5em;
+  overflow        : visible;
+  width           : 90%;
 }
 
 hr.sheet-horizontal-rule::before { /* Not really supposed to work, but does */
-  display: block;
-  content: "";
-  height: 10px;
-  margin-top: -11px;
-  border-style: solid;
-  border-color: #000;
-  border-width: 0 0 1px 0;
-  border-radius: 5px;
+  display      : block;
+  content      : "";
+  margin-top   : -0.6em;
+  border-style : solid;
+  border-width : 0 0 1px 0;
 }
 
 div.sheet-header {
@@ -106,16 +119,6 @@ div.sheet-column-header {
   text-align: center;
 }
 
-.sheet-left,
-.sheet-grid-item.sheet-left {
-  text-align: left;
-}
-
-.sheet-right,
-.sheet-grid-item.sheet-right {
-  text-align: right;
-}
-
 .sheet-center,
 .sheet-grid-item.sheet-center {
   text-align: center;
@@ -124,15 +127,15 @@ div.sheet-column-header {
 
 /* Hide actual radio */
 input.sheet-skull[type="radio"] {
-  opacity: 0;
-  width: 16px;
-  height: 16px;
+  cursor  : pointer;
+  height  : 2em;
+  left    : 6px;
+  margin  : 0em -0.89em;
+  opacity : 0;
   position: relative;
-  top: 1px;
-  left: 6px;
-  margin: -10px;
-  cursor: pointer;
-  z-index: 1;
+  top     : 1px;
+  width   : 1.25em;
+  z-index : 1;
 }
 
 /* Fake radio using skull */
@@ -342,6 +345,18 @@ button[type="action"] {
     border-radius: 5px;
 }
 
+/* Align Inputs to left */
+div.sheet-log-grid input[name="attr_terrain"],
+div.sheet-log-grid input[name="attr_threat_notes"],
+div.sheet-log-grid input[name="attr_comment"],
+div.sheet-ark-projects-repeating input[name="attr_name"],
+div.sheet-ark-info-grid input[name="attr_ark_name"],
+div.sheet-ark-bosses-grid input[name="attr_name"],
+div.sheet-relationships-grid input[type="text"] {
+  text-align: left;
+}
+
+
 /* hide/show areas */
 .sheet-expand {
     opacity: 0;
@@ -518,7 +533,7 @@ div.sheet-character-notes {
 
 /* ---------------------------------- Attributes */
 div.sheet-attributes-grid {
-  grid-template-columns: 4.5em 2fr 2fr 3fr;
+  grid-template-columns: 3fr 0.5fr 1.5fr 7fr;
   grid-template-rows: auto repeat(4, 3em);
 }
 
@@ -533,35 +548,49 @@ div.sheet-attributes-box-header {
    grid-row-start: 1;
 }
 
-div.sheet-attributes-grid span[data-i18n="strength"],
+div.sheet-attributes-grid h2 {
+  font-size  : 1.2em;
+  text-shadow: 0px 1px 1em #fff;
+}
+
+div.sheet-attributes-grid h3 {
+  font-size  : 1.2em;
+  font-style : italic;
+  grid-column: 1;
+  grid-row   : 1;
+  line-height: 1em;
+  text-align : center;
+}
+
+div.sheet-attributes-grid h2[data-i18n="strength"],
 div.sheet-attributes-grid input[name="attr_strength_max"],
 div.sheet-attributes-grid input[name="attr_strength"] {
    grid-row-start: 2;
 }
 
-div.sheet-attributes-grid span[data-i18n="agility"],
+div.sheet-attributes-grid h2[data-i18n="agility"],
 div.sheet-attributes-grid input[name="attr_agility_max"],
 div.sheet-attributes-grid input[name="agility"] {
    grid-row-start: 3;
 }
 
-div.sheet-attributes-grid span[data-i18n="wits"],
+div.sheet-attributes-grid h2[data-i18n="wits"],
 div.sheet-attributes-grid input[name="attr_wits_max"],
-div.sheet-attributes-grid input[name="wits"]{
+div.sheet-attributes-grid input[name="wits"] {
    grid-row-start: 4;
 }
 
-div.sheet-attributes-grid span[data-i18n="empathy"],
+div.sheet-attributes-grid h2[data-i18n="empathy"],
 div.sheet-attributes-grid input[name="attr_empathy_max"],
 div.sheet-attributes-grid input[name="empathy"],
 div.sheet-attributes-grid input[name="attr_doubt"] {
    grid-row-start: 5;
-}
+} 
 
-div.sheet-attributes-grid span[data-i18n="strength"],
-div.sheet-attributes-grid span[data-i18n="agility"],
-div.sheet-attributes-grid span[data-i18n="wits"],
-div.sheet-attributes-grid span[data-i18n="empathy"] {
+div.sheet-attributes-grid h2[data-i18n="strength"],
+div.sheet-attributes-grid h2[data-i18n="agility"],
+div.sheet-attributes-grid h2[data-i18n="wits"],
+div.sheet-attributes-grid h2[data-i18n="empathy"] {
   grid-column: 1;
 }
 
@@ -577,6 +606,20 @@ div.sheet-attributes-grid input[name="attr_agility"],
 div.sheet-attributes-grid input[name="attr_wits"],
 div.sheet-attributes-grid input[name="attr_empathy"] {
   grid-column: 3;
+}
+
+div.sheet-attributes-grid input[type="number"],
+div.sheet-attributes-grid input[type="text"] {
+  margin-top: 0.5em;
+}
+
+div.sheet-wounds-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+div.sheet-wounds-grid input[title="No Damage"] {
+  margin: 0.1em 0.5em 0em 0em;
 }
 
 /* ---------------------------------- Details */
@@ -676,13 +719,6 @@ div.sheet-injuries-grid {
 }
 
 div.sheet-injuries-grid hr  {
-   border-top : 0.1em solid #2e2217;
-   grid-column: 1 / 7;
-   margin     : 2% 0em;
-   width      : 100%;
-}
-
-div.sheet-injuries-grid hr:nth-of-type(2)  {
   grid-column: 1 / 7;
 }
 
@@ -715,7 +751,7 @@ div.sheet-injuries-grid span[data-i18n="hypothermic"] {
   grid-row: 5;
 }
 
-div.sheet-injuries-grid hr:nth-of-type(1)  {
+div.sheet-injuries-grid hr:nth-of-type(2)  {
   grid-row: 6;
 }
 
@@ -808,7 +844,7 @@ div.sheet-injuries-grid input[name="attr_injury_heal_time"]  {
 
 
 /* ---------------------------------- Weapons */
-div.sheet-weapons-box-header,
+div.sheet-character-weapons div.sheet-header,
 div.sheet-weapons-box {
   grid-column: 1 / 8;
 }
@@ -819,24 +855,21 @@ div.sheet-weapons-grid {
   padding: 0 0 2px 0;
 }
 
-div.sheet-weapons-box-header {
+div.sheet-character-weapons div.sheet-header {
   grid-row   : 1;
+  text-align : center;
 }
 
 div.sheet-repeating-weapons-grid {
   grid-template-columns: 1fr 7fr 2fr 2fr 2fr 2fr 10fr
 }
 
-div.sheet-weapons-grid span.sheet-column-header,
-div.sheet-weapons-grid span[data-i18n="name"],
+div.sheet-weapons-grid h2[data-i18n="name"],
 div.sheet-weapons-grid input[name="attr_weapon_name"],
 div.sheet-weapons-grid select[name="attr_weapon_skill"],
 div.sheet-weapons-grid select[name="attr_weapon_bonus"],
 div.sheet-weapons-grid input[name="attr_weapon_damage"],
-div.sheet-weapons-grid input[name="attr_weapon_features"]  {
-  grid-row: 1;
-}
-
+div.sheet-weapons-grid input[name="attr_weapon_features"],
 div.sheet-weapons-grid button.sheet-dicefontd6 {
   grid-row: 1;
 }
@@ -845,32 +878,47 @@ div.sheet-weapons-grid button.sheet-dicefontd6 {
   grid-column: 1;
 }
 
-div.sheet-weapons-grid span[data-i18n="name"],
-div.sheet-weapons-grid input[name="attr_weapon_name" ] {
+div.sheet-character-weapons div.sheet-header h1 {
+  grid-column: 1 / 8;
+  grid-row   : 1;
+}
+
+div.sheet-character-weapons div.sheet-header h2 {
+  color       : #fff;
+  font-size   : 0.9em;
+  font-variant: small-caps;
+  font-weight : normal;
+  grid-row    : 1;
+  line-height : 1em;
+  margin-top  : 2em;
+}
+
+div.sheet-character-weapons div.sheet-header h2:nth-of-type(1),
+div.sheet-weapons-grid input[name="attr_weapon_name"] {
   grid-column: 2;
 }
 
-div.sheet-weapons-grid span[data-i18n="skill"],
+div.sheet-character-weapons div.sheet-header h2:nth-of-type(2),
 div.sheet-weapons-grid select[name="attr_weapon_skill"] {
   grid-column: 3;
 }
 
-div.sheet-weapons-grid span[data-i18n="bonus"],
+div.sheet-character-weapons div.sheet-header h2:nth-of-type(3),
 div.sheet-weapons-grid select[name="attr_weapon_bonus"] {
   grid-column: 4;
 }
 
-div.sheet-weapons-grid span[data-i18n="dmg-abbr"],
+div.sheet-character-weapons div.sheet-header h2:nth-of-type(4),
 div.sheet-weapons-grid input[name="attr_weapon_damage"] {
   grid-column: 5;
 }
 
-div.sheet-weapons-grid span[data-i18n="range"],
-div.sheet-weapons-grid select[name="attr_weapon_range" ] {
+div.sheet-character-weapons div.sheet-header h2:nth-of-type(5),
+div.sheet-weapons-grid select[name="attr_weapon_range"] {
   grid-column: 6;
 }
 
-div.sheet-weapons-grid span[data-i18n="features"],
+div.sheet-character-weapons div.sheet-header h2:nth-of-type(6),
 div.sheet-weapons-grid input[name="attr_weapon_features"] {
   grid-column: 7;
 }
@@ -1336,10 +1384,7 @@ div.sheet-notes-grid {
 
 div.sheet-relationships-grid hr,
 div.sheet-notes-grid hr {
-  background-color: #2d241d;
-  border          : 0.1em solid #2d241d;
   grid-column     : 1/4;
-  margin          : 0.1em;
 }
 
 div.sheet-relationships-grid textarea {
@@ -1409,6 +1454,7 @@ div.sheet-relationships-grid input[type="checkbox"] + span {
   div.sheet-log-grid input[type="checkbox"] + span {
     background   : #fff;
     border       : 0.2em solid #000;
+    border-radius: 1em;
     box-shadow   : inset 0px 0px 3px 1px #7c7c7c;
     display      : inline-block;
     height       : 1em;
@@ -1495,19 +1541,12 @@ div.sheet-ark-development-grid span.sheet-label {
   padding: 3%;
 }
 
-div.sheet-ark hr,
-div.sheet-log hr {
-  border-top : 0.1em solid #2e2217;
-  margin     : 1% 0em;
-  width      : 100%;
-}
 
 div.sheet-ark-info-grid span[data-i18n="type"] {
   grid-column: 1;
 }
 
-div.sheet-ark-info-grid hr,
-div.sheet-ark-development-grid hr  {
+div.sheet-ark-info-grid hr {
   grid-column: 1 / 7;
 }
 
@@ -1587,8 +1626,6 @@ div.sheet-ark-development-grid h1 {
 
 div.sheet-ark-development-grid hr {
   grid-column: 1 / 3;
-  margin     : 2% 0em;
-  width      : 100%;
 }
 
 div.sheet-ark-development-grid input[type="number"] {
@@ -1681,7 +1718,7 @@ div.sheet-ark-projects-repeating {
 }
 
 /* ---------------------------------- ark Bosse */
-div.sheet-ark-boss-grid {
+div.sheet-ark-bosses-grid {
   grid-template-columns: 2fr 1fr;
 }
 
@@ -1781,12 +1818,11 @@ div.sheet-ark-notes textarea {
 
 /* ---------------------------------- log */
 div.sheet-log-grid {
-  grid-template-columns: 2fr 5fr 2fr 1fr 5fr;
+  grid-template-columns: 2fr 5fr 2fr 1fr 5fr 7fr;
 }
 
 div.sheet-log-grid-header {
   height: 4em;
-  margin-bottom: 1%;
 }
 
 div.sheet-log-grid-header h1,
@@ -1824,6 +1860,7 @@ div.sheet-log-grid input[name="attr_rot_level"] {
 
 div.sheet-log-grid h2[data-i18n="threat"] {
   grid-column: 4;
+  text-align: left;
 } 
 
 div.sheet-log-grid input[name="attr_threat"],
@@ -1833,10 +1870,21 @@ div.sheet-log-grid input[name="attr_threat"] + span {
   margin-left: 25%;
 }
 
+div.sheet-log-grid input[name="attr_threat_notes"] {
+  grid-column: 5;
+} 
+
 div.sheet-log-grid h2[data-i18n="comment"],
 div.sheet-log-grid input[name="attr_comment"] {
-  grid-column: 5;
+  grid-column: 6;
 }
+
+div.sheet-ark-bosses-repeating .repcontainer .repitem,
+div.sheet-repeating-log-grid .repcontainer .repitem,
+div.sheet-weapons-box .repcontainer .repitem {
+  margin-top: 1%;
+}
+
 
 /* GRID STYLING */
 
@@ -2227,7 +2275,7 @@ input.sheet-display[value*="display"] ~ div.sheet-settings {
 
 input.sheet-display[value*="settings"] ~ div.sheet-settings {
   border-top: 1px dotted orange;
-  height    : 12em;
+  height    : 13em;
   transition: height 2s;
   -webkit-transition: height 2s; /* Safari */
 }
@@ -2387,7 +2435,7 @@ div.sheet-mutant-box {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header10.jpg");
 }
 
-div.sheet-weapons-box-header,
+div.sheet-character-weapons div.sheet-header,
 div.sheet-gear-box1,
 div.sheet-gear-box6,
 span.sheet-armor-box4,
