--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -488,7 +488,7 @@ button[type=roll].sheet-benniesxp {
 }
 
 .sheet-bigger {
-    font-size: 1.25em;
+    font-size: 1em;
     font-weight: bold;
     color: maroon;
 }
@@ -701,7 +701,8 @@ button[type=roll].sheet-benniesxp {
 .sheet-attributes,
 .sheet-hindrances,
 .sheet-edges,
-.sheet-advancements {
+.sheet-advancements,
+.sheet-recovery {
     position: relative;
     margin: 0px 0px 10px 0px;
     /*background: rgba(255,255,255,0.75);*/
@@ -801,7 +802,8 @@ button[type=roll].sheet-benniesxp {
 
 .sheet-moremods + span,
 .sheet-moreTAP + span,
-.sheet-shakenmoremods + span {
+.sheet-shakenmoremods + span,
+.sheet-soakmoremods + span {
     opacity: 0;
 }
 
@@ -833,9 +835,25 @@ button[type=roll].sheet-benniesxp {
     opacity: 0;
 }
 
+.sheet-soakmoremods {
+    width: 20px;
+    position: absolute;
+    left: 265px;
+    top: 0px;
+    z-index: 9999;
+    opacity: 0;
+}
+
+
 .sheet-sectionSeperator {
     margin: 5px 0 5px 0;
 }
+
+.sheet-block-separator {
+	border: .45px dashed silver; 
+	margin: -4px 0px 8px 0px;
+}
+
 /*------Wounds & Fatigue------*/
 .sheet-conditions {
 	text-align: center;
@@ -1253,7 +1271,8 @@ button[type=roll].sheet-benniesxp {
 /*------- Derived Stats End -------*/
 
 .sheet-moremods + span,
-.sheet-shakenmoremods + span {
+.sheet-shakenmoremods + span,
+.sheet-soakmoremods + span {
     font-family: "Pictos";
     color: gray;
     position: absolute;
@@ -1268,22 +1287,22 @@ button[type=roll].sheet-benniesxp {
     float: right;
 }
 
-.sheet-moremods + span {
+.sheet-moremods + span,
+.sheet-shakenmoremods + span,
+.sheet-soakmoremods + span {
     top: 15px;
-    left: 267px;
-}
-
-.sheet-shakenmoremods + span {
-    top: 30px;
     left: 267px;
 }
 
 .sheet-basetrait:hover ~ .sheet-moremods + span,
 .sheet-basetrait:hover ~ .sheetshakenmoremods + span,
+.sheet-basetrait:hover ~ .sheetsoakmoremods + span,
 .sheet-moremods:hover + span,
 .sheet-shakenmoremods:hover + span,
+.sheet-soakmoremods:hover + span,
 .sheet-moremods:checked + span,
 .sheet-shakenmoremods:checked + span,
+.sheet-soakmoremods:checked + span,
 .sheet-moreTAP:checked + span,
 .sheet-moreTAP:hover + span,
 .sheet-hindranceNedge:hover > .sheet-moremods + span {
@@ -1292,18 +1311,21 @@ button[type=roll].sheet-benniesxp {
 
 .sheet-basetrait:hover > .sheet-moremods + span,
 .sheet-basetrait:hover > .sheet-shakenmoremods + span,
+.sheet-basetrait:hover > .sheet-soakmoremods + span,
 tr.sheet-taprow:hover .sheet-moreTAP + span {
     opacity: 1;
 }
 
 .sheet-moremods:checked + span,
 .sheet-shakenmoremods:checked + span,
+.sheet-soakmoremods:checked + span,
 .sheet-moreTAP:checked + span {
     color: black;
 }
 
 .sheet-moremods:checked ~ .sheet-traitmodplus,
 .sheet-shakenmoremods:checked ~ .sheet-traitmodplus,
+.sheet-soakmoremods:checked ~ .sheet-traitmodplus,
 .sheet-moreFirewall:checked ~ .sheet-fwplus,
 .sheet-moreNT:checked ~ .sheet-ntplus,
 .sheet-moreTRange:checked ~ .sheet-trplus,
@@ -2340,6 +2362,7 @@ span.sheet-vehiclesT {
 
 .sheet-moremods:checked + .sheet-traimodplus,
 .sheet-shakenmoremods:checked + .sheet-traitmodplus,
+.sheet-soakmoremods:checked + .sheet-traitmodplus,
 .sheet-usetap:checked + .sheet-tap,
 .sheet-useInjuries:checked + .sheet-Injuries,
 .sheet-useWorstNightmare:checked + .sheet-WorstNightmare,
@@ -3206,7 +3229,7 @@ input[value="13"].sheet-logo ~ .sheet-website::before {
 }
 
 .sheet-srmconfig {
-    height: 100px;
+    height: 120px;
 }
 
 .sheet-injury {
@@ -3227,7 +3250,7 @@ input[value="13"].sheet-logo ~ .sheet-website::before {
 }
 
 .sheet-miscconfig {
-    height: 200px;
+    height: 220px;
 }
 
 .sheet-logoconfig,
@@ -3774,21 +3797,25 @@ textarea.sheet-event {
 }
 /*----------- End Hero's Journey Stuff -----------*/
 
-/*----------- Start Unshake Stuff -----------*/
+/*----------- Start Recovery Stuff -----------*/
 
-.sheet-unshakebutton {
+.sheet-unshakebutton,
+.sheet-soakbutton {
     display: none;
+	border-bottom: none;
 }
-.sheet-useunshakebutton:checked + .sheet-unshakebutton {
+.sheet-useunshakebutton:checked + .sheet-unshakebutton,
+.sheet-usesoakbutton:checked + .sheet-soakbutton {
     display: block;
-    border: none;
-    margin-bottom: 15px;
     width: 98%;
 }
 
-.sheet-unshake {
+.sheet-unshake,
+.sheet-soak {
     width: 100%;
 }
+/*----------- End Recovery Stuff -----------*/
+
 
 /*----------- Start faux select Stuff -----------*/
 .sheet-container {
