cleaning up code, finished skills

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -46,11 +46,11 @@ div.sheet-ark-other-grid hr {
 }
 
 .sheet-header-h1 {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 1.25em;
-  color: #000;
+  font-family   : "Times New Roman", Times, serif;
+  font-size     : 1.25em;
+  color         : #000;
   letter-spacing: 0.0625em;
-  z-index: 0;
+  z-index       : 0;
 }
 
 .sheet-header > h1 {
@@ -83,14 +83,23 @@ hr.sheet-horizontal-rule::before { /* Not really supposed to work, but does */
 }
 
 div.sheet-header {
-  font-weight: bold;
-  color: #FFF;
-  display: flex;
-  align-items: center;
+  align-items    : center;
+  color          : #FFF;
+  display        : flex;
+  font-weight    : bold;
+  height         : 3em;
   justify-content: center;
-  height: 3em;
-  margin: 0px -5px 0 -5px;
+  margin         : 0px -0.35em 0 -0.35em;
 }
+
+div.sheet-header h2 {
+  color       : #fff;
+  font-size   : 0.9em;
+  font-variant: small-caps;
+  font-weight : normal;
+  line-height : 1em;
+}
+
 
 div.sheet-column-header {
   color     : #FFF;
@@ -140,27 +149,27 @@ input.sheet-skull[type="radio"] {
 
 /* Fake radio using skull */
 input.sheet-skull[type="radio"] + span::before {
-  background-image: url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/qSmoVBF.png%3F2);
-  margin-right: 6px;
-  line-height: 14px;
-  text-align: center;
-  display: inline-block;
-  vertical-align: middle;
-  content: url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/1N9eJNN.png%3F2);
-  width: 16px;
-  height: 16px;
-  font-size: 24px;
+  background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/skullred.png);
+  content         : "";
+  display         : inline-block;
+  font-size       : 24px;
+  height          : 16px;
+  line-height     : 14px;
+  margin-right    : 6px;
+  text-align      : center;
+  vertical-align  : middle;
+  width           : 16px;
 }
 
 /* Removes skull from all radios _after_ selected one */
 input[type="radio"]:checked ~ input.sheet-skull[type="radio"] + span::before,
 input.sheet-skull[type="radio"]:checked ~ input.sheet-skull[type="radio"] + span::before {
   content: "";
+  background-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/skull.png);
 }
 
 /* Fake radio using xbox for Experience/Willpower */
 input[type="radio"].sheet-xbox + span::before {
-  background-image: url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/Vsnygg8.png);
   margin-right: 0px;
   margin-left: -20px;
   line-height: 14px;
@@ -464,6 +473,7 @@ div.sheet-character-details {
 
 div.sheet-character-appearance {
   grid-row-start: 1;
+  grid-column: 2;
 }
 
 div.sheet-character-injuries {
@@ -537,18 +547,14 @@ div.sheet-attributes-grid {
   grid-template-rows: auto repeat(4, 3em);
 }
 
-.sheet-attributes-grid > div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
 
 div.sheet-attributes-box-header {
-   grid-column: 1 / 5;
+   grid-column   : 1 / 5;
    grid-row-start: 1;
 }
 
-div.sheet-attributes-grid h2 {
+div.sheet-attributes-grid h2,
+div.sheet-character-appearance h2 {
   font-size  : 1.2em;
   text-shadow: 0px 1px 1em #fff;
 }
@@ -659,54 +665,50 @@ div.sheet-details-grid input[name="attr_role"] {
 
 /* ---------------------------------- Appearance */
 
-.sheet-appearance-grid {
-  display              : grid;
-  grid-column-gap      : 0.1em;
-  grid-row-gap         : 0.2em;
+div.sheet-appearance-grid {
   grid-template-columns: 1fr 4fr;
 }
 
-.sheet-appearance-grid > div {
-  display: flex;
-  align-items: center;
-}
-
-.sheet-appearance-box1 {
+div.sheet-appearance-header {
   grid-row-start: 1;
-  grid-column: 1/5;
+  grid-column   : 1 / 3;
 }
 
-.sheet-appearance-box2 {
+div.sheet-appearance-header h1 {
+  margin-top: -0.1em;
+  text-align: center;
+  width     : 100%;
+}
+
+div.sheet-appearance-grid button[name="act_settings_face"],
+div.sheet-appearance-grid h2[data-i18n="face"],
+div.sheet-appearance-grid button[name="act_settings_body"], 
+div.sheet-appearance-grid h2[data-i18n="body"],
+div.sheet-appearance-grid button[name="act_settings_clothing"], 
+div.sheet-appearance-grid h2[data-i18n="clothing"] {
+  grid-column-start: 1;
+}
+
+div.sheet-appearance-grid span,
+div.sheet-appearance-grid textarea {
+  grid-column-start: 2;
+  margin           : 4% 2%;
+  width            : 95%;
+}
+
+div.sheet-appearance-grid button[name="act_settings_face"],
+div.sheet-appearance-grid h2[data-i18n="face"] {
   grid-row-start: 2;
-  grid-column-start: 1;
 }
 
-.sheet-appearance-box3 {
-  grid-row-start: 2;
-  grid-column: 2/5;
-  margin: 2%;
-}
-
-.sheet-appearance-box4 {
+div.sheet-appearance-grid button[name="act_settings_body"],
+div.sheet-appearance-grid h2[data-i18n="body"] {
   grid-row-start: 3;
-  grid-column-start: 1;
 }
 
-.sheet-appearance-box5 {
-  grid-row-start: 3;
-  grid-column: 2/5;
-  margin: 2%;
-}
-
-.sheet-appearance-box6 {
+div.sheet-appearance-grid button[name="act_settings_clothing"],
+div.sheet-appearance-grid h2[data-i18n="clothing"] {
   grid-row-start: 4;
-  grid-column-start: 1;
-}
-
-.sheet-appearance-box7 {
-  grid-row-start: 4;
-  grid-column: 2/5;
-  margin: 2%;
 }
 
 /* ---------------------------------- Critical Injuries */
@@ -884,13 +886,8 @@ div.sheet-character-weapons div.sheet-header h1 {
 }
 
 div.sheet-character-weapons div.sheet-header h2 {
-  color       : #fff;
-  font-size   : 0.9em;
-  font-variant: small-caps;
-  font-weight : normal;
-  grid-row    : 1;
-  line-height : 1em;
-  margin-top  : 2em;
+  grid-row  : 1;
+  margin-top: 2em;
 }
 
 div.sheet-character-weapons div.sheet-header h2:nth-of-type(1),
@@ -989,26 +986,55 @@ div.sheet-mutantions-grid {
 }
 
 /* ---------------------------------- Skills */
-div.sheet-skills-grid > span,
-div.sheet-repeating-skill-grid {
-  display              : grid;
-  grid-column-gap      : 0.1em;
-  grid-row-gap         : 0.1em;
+div.sheet-skills-grid{
   grid-template-columns: 5fr 1.5fr 1.5fr 0.5fr 1fr;
   padding              : 1px 0;
 }
 
-div.sheet-repeating-skill-grid button[type="action"] {
-  grid-column: 1;
-  grid-row: 1;
-  position: relative;
-}
-
-div.sheet-repeating-skill-grid input[name="attr_name"] {
+div.sheet-skills-grid h1 {
   grid-column: 1 / 6;
   grid-row   : 1;
-  text-align : left;
-  width      : 100%;
+  text-align : center;
+}
+
+div.sheet-skills-grid h2 {
+  grid-row: 2;
+}
+
+div.sheet-skills-grid h2:nth-of-type(1) {
+  grid-column: 2;
+}
+
+div.sheet-skills-grid h2:nth-of-type(2) {
+  grid-column: 3;
+}
+
+div.sheet-skills-grid h2:nth-of-type(3) {
+  grid-column: 4;
+}
+
+div.sheet-skills-grid button {
+  grid-column: 1;
+}
+
+div.sheet-skills-grid input[type="number"] {
+  grid-column: 2;
+}
+
+div.sheet-skills-grid input[type="text"] {
+  grid-column: 3;
+}
+
+div.sheet-skills-grid span[class="equal"] {
+  grid-column: 4;
+}
+
+div.sheet-skills-grid input[type="text"][name*="total"] {
+  grid-column: 5;
+}
+
+div.sheet-repeating-skill-grid {
+  grid-column: 1 / 6;
 }
 
 div.sheet-repeating-skill-grid select {
@@ -1017,37 +1043,6 @@ div.sheet-repeating-skill-grid select {
 
 div.sheet-repeating-skill-grid span {
   text-align: center;
-}
-
-.sheet-skills-grid > span > div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.sheet-skills-box1 {
-  grid-row-start: 1;
-  grid-column: 1/6;
-}
-
-.sheet-skills-box2 {
-  grid-row-start: 1;
-  grid-column: 2/3;
-}
-
-.sheet-skills-box3 {
-  grid-row-start: 1;
-  grid-column-start: 3;
-}
-
-.sheet-skills-box4 {
-  grid-row-start: 1;
-  grid-column-start: 4;
-}
-
-.sheet-skills-box5 {
-  grid-row-start: 1;
-  grid-column-start: 5;
 }
 
 /* ---------------------------------- Armor/Helmet */
@@ -2285,24 +2280,22 @@ input.sheet-display[value*="settings"] ~ div.sheet-repeating-skill-grid.sheet-se
 }
 
 input.sheet-display[value*="settings"] ~ button.sheet-toggles,
-input.sheet-display[value*="face"] ~ div.sheet-appearance-box2 button.sheet-toggles,
-input.sheet-display[value*="body"] ~ div.sheet-appearance-box4 button.sheet-toggles,
-input.sheet-display[value*="clothing"] ~ div.sheet-appearance-box6 button.sheet-toggles {
+input.sheet-display[value*="face"] ~ button[name="act_settings_face"],
+input.sheet-display[value*="body"] ~ button[name="act_settings_body"],
+input.sheet-display[value*="clothing"] ~ button[name="act_settings_clothing"] {
   opacity: 100;
 }
 
-input.sheet-display[value*="face"] ~ div.sheet-appearance-box3 textarea,
-input.sheet-display[value*="body"] ~ div.sheet-appearance-box5 textarea,
-input.sheet-display[value*="clothing"] ~ div.sheet-appearance-box7 textarea {
+input.sheet-display[value*="face"] ~ textarea[name="attr_face"],
+input.sheet-display[value*="body"] ~ textarea[name="attr_body"],
+input.sheet-display[value*="clothing"] ~ textarea[name="attr_clothing"] {
   display: inline-block;
 }
 
-div.sheet-appearance-box3 textarea,
-div.sheet-appearance-box5 textarea,
-div.sheet-appearance-box7 textarea,
-input.sheet-display[value*="face"] ~ div.sheet-appearance-box3 span,
-input.sheet-display[value*="body"] ~ div.sheet-appearance-box5 span,
-input.sheet-display[value*="clothing"] ~ div.sheet-appearance-box7 span {
+div.sheet-appearance-grid textarea,
+input.sheet-display[value*="face"] ~ span[name="attr_face"],
+input.sheet-display[value*="body"] ~ span[name="attr_body"],
+input.sheet-display[value*="clothing"] ~ span[name="attr_clothing"] {
   display: none;
 }
 
@@ -2400,12 +2393,13 @@ div.sheet-rot-grid label[title="permaneant rot"] > span {
     color: #c77624;
   }
 
+/* Add Backgrounds to Headers */
 div.sheet-attributes-box-header {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header.jpg");
 }
 
-div.sheet-appearance-box1 {
+div.sheet-appearance-header h1 {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header7.jpg");
 }
@@ -2415,7 +2409,7 @@ div.sheet-injuries-header {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header2.jpg");
 }
 
-div.sheet-skills-box1 {
+div.sheet-skills-grid.sheet-header {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header3.jpg");
 }
