--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -99,8 +99,8 @@ hr.sheet-horizontal-rule::before { /* Not really supposed to work, but does */
 /* Hide actual radio */
 input.sheet-skull[type="radio"] {
   opacity: 0;
-  width: 16px;
-  height: 16px;
+  width: 15px;
+  height: 15px;
   position: relative;
   top: 1px;
   left: 6px;
@@ -118,8 +118,8 @@ input.sheet-skull[type="radio"] + span::before {
   display: inline-block;
   vertical-align: middle;
   content: url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/1N9eJNN.png%3F2);
-  width: 16px;
-  height: 16px;
+  width: 15px;
+  height: 15px;
   font-size: 24px;
 }
 
@@ -214,7 +214,7 @@ button.sheet-roll-button {
 
 /* api dice toggle */
 button.sheet-api-button {
-  border: 1px dotted black;
+  border: 1px solid lightblue;
   box-shadow: 1px 2px 2px darkgrey;
 }
 
@@ -1853,6 +1853,10 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   text-align: center;
 }
 
+.sheet-dice_pool-grid .sheet-grid-item {
+  width: 103%;
+}
+
 .sheet-sub-grid-item {
   text-align: center;
   margin: 2px;
@@ -1914,10 +1918,9 @@ input.sheet-dice-selection:hover + span::before {
   color: #fff;
 }
 
-input.sheet-dice-selection:checked + span::before {
+input.sheet-attribute:checked + span::before {
     color: #000;
     background: #FFFFFF;
-    font-weight: bold;
 }
 
 input.sheet-skill:checked + span::before {
@@ -1948,6 +1951,42 @@ input.sheet-epic:checked + span::before {
 input.sheet-legendary:checked + span::before {
     color: #000;
     background: #ff8c00;
+}
+
+/* Included to help color blind users */
+button[type="action"]:focus {
+  border: 2px dotted white;
+  background: #810000;
+  color: white;
+}
+
+button[type="action"]:focus span {
+  color: white;
+}
+
+.sheet-dice_pool-grid button[type="action"]:focus {
+  background-color: buttonface;
+  border-width: 2px;
+  border-style: outset;
+  border-color: buttonface;
+  border-image: initial;
+}
+
+.sheet-dice_pool-grid button[type="action"]:focus span {
+  color: buttontext;
+}
+
+input[type="radio"].sheet-dice-selection.sheet-attribute:checked + span::before {
+  border: 2px dotted black;
+}
+
+input[type="radio"].sheet-dice-selection.sheet-skill:checked + span::before,
+input[type="radio"].sheet-dice-selection.sheet-gear:checked + span::before,
+input[type="radio"].sheet-dice-selection.sheet-negative:checked + span::before,
+input[type="checkbox"].sheet-mighty:checked + span::before,
+input[type="checkbox"].sheet-epic:checked + span::before,
+input[type="checkbox"].sheet-legendary:checked + span::before {
+  border: 2px dotted white;
 }
 
 /* ROLL TEMPLATE STYLING */
