--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -269,7 +269,8 @@ div.sheet-tab-content {
 input.sheet-character:checked ~ div.sheet-character,
 input.sheet-stronghold:checked ~ div.sheet-stronghold,
 input.sheet-dice_only:checked ~ div.sheet-character {
-   display: block;
+  display: inline-block;
+  margin-top: -30px;
 }
 
 input.sheet-dice_only:checked ~ div.sheet-character .sheet-toggle-dice-only {
@@ -282,7 +283,7 @@ input[type='radio'].sheet-tab {
    font-size: 1.1em;
    font-family: "Times New Roman", Times, serif;
    float: left;
-   margin: 0;
+   margin: 32px 1px 0 1px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
@@ -295,15 +296,40 @@ input[type='radio'].sheet-tab {
 
 input.sheet-tab::before {
    content: attr(title);
-   border: 1px solid #ccc;
-   border-bottom: 1px solid #444;
+   border: 2px solid #ccc;
+   border-bottom: 2px solid transparent;
    border-radius: 4px 4px 0 0;
    padding-bottom: 1px;
    text-align: center;
    display: block;
+   background: #ddd;
    color: #444;
    width: 100px;
-   line-height: 20px;
+   height: 16px;
+   line-height: 18px;
+}
+
+input.sheet-tab.sheet-character:checked,
+input.sheet-tab.sheet-stronghold:checked,
+input.sheet-tab.sheet-dice_only:checked {
+  z-index: 2;
+}
+
+input.sheet-tab.sheet-character:hover,
+input.sheet-tab.sheet-stronghold:hover,
+input.sheet-tab.sheet-dice_only:hover {
+  z-index: 3;
+}
+input.sheet-tab.sheet-character:hover::before,
+input.sheet-tab.sheet-stronghold:hover::before,
+input.sheet-tab.sheet-dice_only:hover::before {
+  z-index: 3;
+  margin: -6px 0 0 0;
+  height: 22px;
+  width: 106px;
+  border-color: #aaa;
+  border-bottom-color: transparent;
+  background: #f5f5f5;
 }
 
 input.sheet-tab:active,
@@ -315,14 +341,21 @@ input.sheet-tab:hover::before {
    background: #e3e3e3;
 }
 
+input.sheet-tab:hover::before {
+  background: #e3e3e3;
+  height: 20px;
+  font-weight: bold;
+  margin: -3px 0 0 -2px;
+}
+
 input.sheet-tab:checked::before,
 input.sheet-tab:checked:hover::before {
-   border: 1px solid #444;
-   border-bottom: 1px solid #fff;
-   background: #fff;
-   height: 24px;
-   width: 100px;
-   margin: -4px 0 0 -2px;
+   border: 2px solid #444;
+   border-bottom: 2px solid transparent;
+   background: white;
+   height: 20px;
+   width: 106px;
+   margin: -3px 0 0 -2px;
    font-weight: bold;
 }
 
@@ -342,8 +375,7 @@ input.sheet-tab:checked:hover::before {
 }
 
  .sheet-logo {
-  text-align: center;
-  width: 835px;
+  text-align: right;
 }
 
 input {
@@ -547,6 +579,8 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
   grid-row-start: 7;
   grid-column-start: 1;
   background-image: url(https://s3.amazonaws.com/files.d20.io/images/77923969/rCsuF5JKiAG1oJwXLYGB7Q/max.jpg);
+  overflow: hidden;
+  margin: -1px 0 0 0;
 
 /*  black version
   background-image: url(https://s3.amazonaws.com/files.d20.io/images/77920570/BbWQkoopzZfCFHSHxCurHw/max.jpg);
@@ -558,6 +592,8 @@ input.sheet-expand:checked ~ .sheet-input-textarea {
 .sheet-character-coins {
   grid-row-start: 7;
   grid-column-start: 2;
+  overflow: hidden;
+  margin: -1px 0 0 0;
 }
 
 .sheet-character-experience {
@@ -1013,6 +1049,7 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: -1px;
 }
 
 .sheet-skills-box1 {
