main tab aestic improvements

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -15,7 +15,7 @@ h1 {
 
 hr {
   background-color: #2d241d;
-  border          : 0.1em solid #2d241d;
+  border          : 1px solid #2d241d;
   margin          : 0.1em;
 }
 
@@ -84,12 +84,14 @@ hr.sheet-horizontal-rule::before { /* Not really supposed to work, but does */
 
 div.sheet-header {
   align-items    : center;
+  border-bottom  : 0.1em solid #2e2217;
   color          : #FFF;
   display        : flex;
   font-weight    : bold;
   height         : 3em;
   justify-content: center;
-  margin         : 0px -0.35em 0 -0.35em;
+  margin         : 0px -0.4em 0 -0.4em;
+  text-align     : center;
 }
 
 div.sheet-header h2 {
@@ -98,6 +100,7 @@ div.sheet-header h2 {
   font-variant: small-caps;
   font-weight : normal;
   line-height : 1em;
+  text-align  : center;
 }
 
 
@@ -501,7 +504,6 @@ div.sheet-character-talents {
 }
 
 div.sheet-rot-level {
-  background-color: #c77624;
   grid-column     : 1 / 1;
   grid-row-start  : 4;
 }
@@ -518,16 +520,16 @@ div.sheet-character-gear {
 
 div.sheet-character-experience {
   grid-row-start: 5;
-  grid-column: 1 / 1;
+  grid-column   : 1 / 1;
+  height        : 2.8em;
 }
 
 div.sheet-experience-dots {
-  background-color: #c77624;
-  border          : 0.2em solid #2e2217;
-  grid-column     : 2 / 2;
-  grid-row-start  : 5;
-  margin-top      : 0em;
-  padding         : 0.5em;
+  border        : 0.2em solid #2e2217;
+  grid-column   : 2;
+  grid-row-start: 5;
+  padding       : 0.5em;
+  width         : 95.5%;
 }
 
 div.sheet-character-relationships {
@@ -566,6 +568,10 @@ div.sheet-attributes-grid h3 {
   grid-row   : 1;
   line-height: 1em;
   text-align : center;
+}
+
+div.sheet-attributes-grid hr {
+  grid-column: 1 / 5;
 }
 
 div.sheet-attributes-grid h2[data-i18n="strength"],
@@ -675,17 +681,18 @@ div.sheet-appearance-header {
 }
 
 div.sheet-appearance-header h1 {
-  margin-top: -0.1em;
-  text-align: center;
-  width     : 100%;
+  grid-column  :  1 / 3;
+  height       : 100%;
+  margin-bottom: -0.2em;
+  margin-top   : -0.2em;
 }
 
 div.sheet-appearance-grid button[name="act_settings_face"],
-div.sheet-appearance-grid h2[data-i18n="face"],
+div.sheet-appearance-grid button[name="act_settings_face"] + h2,
 div.sheet-appearance-grid button[name="act_settings_body"], 
-div.sheet-appearance-grid h2[data-i18n="body"],
+div.sheet-appearance-grid button[name="act_settings_body"] + h2,
 div.sheet-appearance-grid button[name="act_settings_clothing"], 
-div.sheet-appearance-grid h2[data-i18n="clothing"] {
+div.sheet-appearance-grid button[name="act_settings_clothing"] + h2 {
   grid-column-start: 1;
 }
 
@@ -697,18 +704,18 @@ div.sheet-appearance-grid textarea {
 }
 
 div.sheet-appearance-grid button[name="act_settings_face"],
-div.sheet-appearance-grid h2[data-i18n="face"] {
-  grid-row-start: 2;
+div.sheet-appearance-grid button[name="act_settings_face"] + h2 {
+  grid-row-start: 1;
 }
 
 div.sheet-appearance-grid button[name="act_settings_body"],
-div.sheet-appearance-grid h2[data-i18n="body"] {
-  grid-row-start: 3;
+div.sheet-appearance-grid button[name="act_settings_body"] + h2 {
+  grid-row-start: 2;
 }
 
 div.sheet-appearance-grid button[name="act_settings_clothing"],
-div.sheet-appearance-grid h2[data-i18n="clothing"] {
-  grid-row-start: 4;
+div.sheet-appearance-grid button[name="act_settings_clothing"] + h2 {
+  grid-row-start: 3;
 }
 
 /* ---------------------------------- Critical Injuries */
@@ -795,6 +802,10 @@ input[name="attr_cold"]:checked ~ span[data-i18n="hypothermic"] {
 
 div.sheet-injuries-header {
   grid-row-start: 1;
+}
+
+div.sheet-injuries-header h1 {
+  grid-row-start: 1;
   grid-column   : 1 / 7;
 }
 
@@ -863,7 +874,8 @@ div.sheet-character-weapons div.sheet-header {
 }
 
 div.sheet-repeating-weapons-grid {
-  grid-template-columns: 1fr 7fr 2fr 2fr 2fr 2fr 10fr
+  grid-template-columns: 1fr 7fr 2fr 2fr 2fr 2fr 10fr;
+  margin-bottom        : 1%;
 }
 
 div.sheet-weapons-grid h2[data-i18n="name"],
@@ -985,10 +997,27 @@ div.sheet-mutantions-grid {
   grid-template-columns: 1fr;
 }
 
+div.sheet-mutants-grid div.sheet-dots {
+  border-bottom   : 0.2em solid #2e2217;
+  margin-bottom   : 2%;
+  padding         : 0.4em;
+}
+
 /* ---------------------------------- Skills */
-div.sheet-skills-grid{
+div.sheet-skills-grid {
   grid-template-columns: 5fr 1.5fr 1.5fr 0.5fr 1fr;
   padding              : 1px 0;
+}
+
+div.sheet-skill-orange {
+  background-color: #c77624;
+  border-bottom   : 0.1em solid #2d241d;
+  margin          : 0em -0.4em 0.5em -0.4em;
+  padding         : 0.5em 0.3em;
+}
+
+div.sheet-skill-orange span.sheet-equal {
+  color: #fff;
 }
 
 div.sheet-skills-grid h1 {
@@ -998,7 +1027,13 @@ div.sheet-skills-grid h1 {
 }
 
 div.sheet-skills-grid h2 {
-  grid-row: 2;
+  grid-row   : 1;
+  padding-top: 2em;
+  text-align : center;
+}
+
+div.sheet-skills-grid hr {
+  grid-column: 1 / 6;
 }
 
 div.sheet-skills-grid h2:nth-of-type(1) {
@@ -1010,7 +1045,7 @@ div.sheet-skills-grid h2:nth-of-type(2) {
 }
 
 div.sheet-skills-grid h2:nth-of-type(3) {
-  grid-column: 4;
+  grid-column: 5;
 }
 
 div.sheet-skills-grid button {
@@ -1035,6 +1070,7 @@ div.sheet-skills-grid input[type="text"][name*="total"] {
 
 div.sheet-repeating-skill-grid {
   grid-column: 1 / 6;
+  background-color: #ead3b8;
 }
 
 div.sheet-repeating-skill-grid select {
@@ -1359,11 +1395,11 @@ div.sheet-experience-box div.sheet-dots {
   grid-column-start: 2;
 }
 
-.sheet-experience-grid .sheet-header > .sheet-input {
-  z-index: 1;
+div.sheet-experience-grid .sheet-header {
+  border-bottom: none;
 }
 
-.sheet-experience-grid .sheet-header > h1 {
+div.sheet-experience-grid .sheet-header > h1 {
   margin: 0;
 }
 
@@ -1377,28 +1413,30 @@ div.sheet-notes-grid {
   grid-row-gap         : 1px;
 }
 
+div.sheet-relationships-header {
+  grid-row-start: 1;
+  grid-column: 1 / 4;
+}
+
+div.sheet-relationships-header h1 {
+  grid-row   : 1;
+  grid-column: 1 / 4;
+}
+
+div.sheet-relationships-header h2 {
+  grid-row   : 1;
+  grid-column: 3;
+  margin-top : 2em;
+}
+
+div.sheet-repeating-relationships {
+  grid-row-start: 3;
+  grid-column: 1 / 4;
+}
+
 div.sheet-relationships-grid hr,
 div.sheet-notes-grid hr {
   grid-column     : 1/4;
-}
-
-div.sheet-relationships-grid textarea {
-  width: 95%;
-}
-
-.sheet-relationships-box1 {
-  grid-row-start: 1;
-  grid-column: 1/4;
-}
-
-.sheet-relationships-box2{
-  grid-row-start: 1;
-  grid-column: 3;
-}
-
-div.sheet-relationships-box3 {
-  grid-row-start: 3;
-  grid-column: 1/4;
 }
 
 div.sheet-relationships-grid input.sheet-input-number {
@@ -1430,6 +1468,15 @@ div.sheet-relationships-grid input[type="checkbox"],
 div.sheet-relationships-grid input[type="checkbox"] + span {
     grid-column: 3;
     grid-row   : 1;
+}
+
+div.sheet-relationships-grid textarea {
+  grid-column: 2 / 4;
+}
+
+div.sheet-relationships-grid span[name*="pc_name"],
+div.sheet-notes-grid span[name="attr_note_name"] {
+  font-weight: bold;
 }
 
 /* Styled Check boxes */
@@ -1476,10 +1523,7 @@ div.sheet-relationships-grid input[type="checkbox"] + span {
 
   /* Notes */
 div.sheet-notes-grid {
-  display              : grid;
   grid-template-columns: 1fr 3fr;
-  grid-column-gap      : 2px;
-  grid-row-gap         : 1px;
 }
 
 div.sheet-notes-box-header,
@@ -2279,6 +2323,10 @@ input.sheet-display[value*="settings"] ~ div.sheet-repeating-skill-grid.sheet-se
   height: 2.5em;
 }
 
+input.sheet-display[value*="settings"] ~ div.sheet-relationships-grid.sheetsettings {
+  height: 10em;
+}
+
 input.sheet-display[value*="settings"] ~ button.sheet-toggles,
 input.sheet-display[value*="face"] ~ button[name="act_settings_face"],
 input.sheet-display[value*="body"] ~ button[name="act_settings_body"],
@@ -2299,9 +2347,10 @@ input.sheet-display[value*="clothing"] ~ span[name="attr_clothing"] {
   display: none;
 }
 
-div.sheet-rot-level div.sheet-dots,
-div.sheet-mutants-grid div.sheet-dots {
-  margin-top: 2%;
+div.sheet-dots {
+  background-color: #c77624;
+  margin-left     : -0.35em;
+  margin-right    : -0.35em;
 }
 
 div.sheet-dots input[type="radio"] {
@@ -2340,7 +2389,10 @@ div.sheet-rot-grid input[type="number"].sheet-input-number {
 }
 
 div.sheet-rot-grid div.sheet-dots {
+  border-bottom: 0.2em solid #2e2217;
   margin-bottom: 2%;
+  margin-right : -0.4em;
+  padding      : 0.5em;
 }
 
 div.sheet-rot-grid label[title="permaneant rot"] {
@@ -2439,7 +2491,7 @@ div.sheet-ark-notes h1[data-i18n="notes"]  {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header13.jpg");
 }
 
-div.sheet-relationships-box1,
+div.sheet-relationships-header,
 div.sheet-ark h1[data-i18n="ark"],
 div.sheet-log-grid-header {
   background-size: cover;
