Implementing Conditions from Fate Toolkit

--- a/Fate Core v2/fate.css
+++ b/Fate Core v2/fate.css
@@ -693,6 +693,7 @@ span.sheet-stress-header-skill:empty:after {
 }
 
 /* === CONSEQUENCES === */
+.sheet-section-conditions,
 .sheet-section-consequences {
     padding-left: 2.5px;
 }
@@ -710,6 +711,13 @@ span.sheet-stress-header-skill:empty:after {
     top: -0.5em;
 }
 
+.sheet-conditions-row .sheet-worth-value {
+    position: relative;
+    top: -0.25em;
+    right: -0.5em;
+    font-weight: bold;
+}
+
 .sheet-worth-text {
     margin-left: -3px !important;
 }
@@ -718,14 +726,58 @@ span.sheet-stress-header-skill:empty:after {
     width: 90px;
     display: inline-block;
 }
-
 .sheet-consequence-aspect {
-    width: calc(100% - 120px);
+    vertical-align: middle;
+    flex-grow: 1;
 }
-
 span.sheet-consequence-healing {
     font-family: 'pictos';
     margin-left: -1.5px !important;
+}
+
+.sheet-consequence-healing input[type="checkbox"]::before {
+    position: relative;
+    top: -0.65em;
+    right: 0.5em;
+    font-weight: bold;
+    font-family: 'pictos';
+    content: "k";
+}
+
+.sheet-conditions-row .sheet-consequence-worth,
+.sheet-consequence-healing {
+    width: 35px;
+}
+
+.sheet-section-conditions,
+.sheet-conditions-flag:checked ~ .sheet-section-consequences {
+    display: none;
+}
+
+.sheet-conditions-flag:checked ~ .sheet-section-conditions {
+    display: block;
+}
+
+.sheet-conditions-row,
+.sheet-consequence-row {
+    display: flex;
+    align-items: center;
+}
+
+.sheet-display .sheet-conditions-row,
+.sheet-section-conditions .sheet-display .repcontrol[data-groupname="repeating_consequences"] {
+    display: none;
+}
+
+.sheet-section-conditions .sheet-conditions-group8 input.sheet-conditions-filter[type="hidden"][value="8"] ~ .sheet-conditions-row,
+.sheet-section-conditions .sheet-conditions-group7 input.sheet-conditions-filter[type="hidden"][value="7"] ~ .sheet-conditions-row,
+.sheet-section-conditions .sheet-conditions-group6 input.sheet-conditions-filter[type="hidden"][value="6"] ~ .sheet-conditions-row,
+.sheet-section-conditions .sheet-conditions-group5 input.sheet-conditions-filter[type="hidden"][value="5"] ~ .sheet-conditions-row,
+.sheet-section-conditions .sheet-conditions-group4 input.sheet-conditions-filter[type="hidden"][value="4"] ~ .sheet-conditions-row,
+.sheet-section-conditions .sheet-conditions-group3 input.sheet-conditions-filter[type="hidden"][value="3"] ~ .sheet-conditions-row,
+.sheet-section-conditions .sheet-conditions-group2 input.sheet-conditions-filter[type="hidden"][value="2"] ~ .sheet-conditions-row,
+.sheet-section-conditions .sheet-conditions-group1 input.sheet-conditions-filter[type="hidden"][value="1"] ~ .sheet-conditions-row {
+    display: flex;
 }
 
 /* === SETTINGS === */
