--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1807,6 +1807,14 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
     border: 2px solid red;
 }
 
+.sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-failure p,
+.sheet-rolltemplate-skillRoll .sheet-container table.sheet-result span.sheet-success p{
+    margin: 4px 0 4px 0;
+    line-height: 14px;
+    font-size: 11px;
+    font-style: italic;    
+}
+
 .sheet-rolltemplate-skillRoll .sheet-container table.sheet-result .sheet-failure-text {
     background-color: red;
     color: white;
